--- a/.github/workflows/main_chatemotion.yml
+++ b/.github/workflows/main_chatemotion.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          ls
+          cd server
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
