--- a/.github/workflows/main_chatemotion.yml
+++ b/.github/workflows/main_chatemotion.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - chatemotion
 
 on:
@@ -30,7 +26,10 @@ jobs:
 
       - name: Install dependencies
         run: |
+          echo "Listing files in root directory:"
           ls
+          echo "Listing files in 'server' directory:"
+          ls server
           cd server
           python -m pip install --upgrade pip
           pip install -r requirements.txt
